# socket-chat

./: .clang-format  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  client.cpp  client.hpp  clientapp.cpp  message.hpp  request.hpp  server.cpp  server.hpp  serverapp.cpp  ui.cpp  ui.hpp
test/: CMakeLists.txt  test.cpp
